change convert time, fix layout of row, text-wrap, create wall page

--- a/src/stylesheets/pages/_detail.scss
+++ b/src/stylesheets/pages/_detail.scss
@@ -87,25 +87,29 @@
     .author-info-list {
       @include align-center;
       height: 3rem;
-      max-width: 15rem;
       overflow: hidden;
       margin: 1rem 0;
       .author-info-item {
+        @include align-center;
         cursor: pointer;
         margin-right: 1rem;
-      }
-      .author-avatar {
-        @include flex-center;
-        width: 3rem;
-        height: 3rem;
-        border-radius: 50%;
-        overflow: hidden;
-        margin-right: 0.5rem;
-        img {
-          height: 100%;
-          object-fit: cover;
-          border: 1px solid #eee;
+        .author-avatar {
+          @include flex-center;
+          width: 3rem;
+          height: 3rem;
           border-radius: 50%;
+          overflow: hidden;
+          margin-right: 0.5rem;
+          img {
+            height: 100%;
+            object-fit: cover;
+            border: 1px solid #eee;
+            border-radius: 50%;
+          }
+        }
+        .author-name{
+          @include text-overflow(1);
+          max-width: 15rem;
         }
       }
     }
@@ -130,7 +134,6 @@
     }
     .interact-title {
       cursor: pointer;
-      
     }
     .form-comment {
       display: flex;
@@ -150,11 +153,11 @@
         height: 40px;
       }
     }
-    .error{
+    .error {
       color: red;
       font-size: map-get($font-size, 'sm');
       margin-top: -1rem;
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
       margin-left: 0;
     }
     margin: 3rem auto;
